--- a/shared_data/report_templates/base_report/preambulo.tex
+++ b/shared_data/report_templates/base_report/preambulo.tex
@@ -8,9 +8,10 @@
 % Pacotes para citações no estilo ABNT
 \usepackage[alf]{abntex2cite}
 
+\usepackage{graphicx}
 
 % Pacotes adicionais (xcolor REMOVIDO desta lista, tikz ainda está aqui, mas xcolor já foi carregado)
-\usepackage{csquotes, graphicx, comment, enumerate, multirow,
+\usepackage{csquotes, comment, enumerate, multirow,
     multicol, titlesec, amsmath, amsthm, amsfonts, amssymb, dsfont,
     blindtext, ragged2e, array, enumitem, tikz, bbding, pifont, wasysym,
     titling, longtable, fancyhdr, url, float, placeins, xurl}
